# routers/routers.go
@@ -18,6 +18,7 @@ func RegisterApiRoutes(router *gin.Engine) {
 	api.POST("save_user", control.SaveUser)
 	api.GET("get_user_page", control.GetUserPage)
 	api.POST("delete_user", control.DeleteUser)
+	api.GET("get_user", control.GetUser)
 	api.GET("get_all_users", control.GetAllUsers)
 
 	api.POST("save_role", control.SaveRole)
